<?xml version="1.0"?>
<package format="2">
  <name>mars_rover_twist_control</name>
  <version>0.1.0</version>
  <description>Control Mars Rover with Twist Messages</description>
  <author email="vadim.razorq@gmail.com">Vadim Manaenko</author>
  <maintainer email="vadim.razorq@aira.life">Vadim Manaenko</maintainer>
  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
